// Vitest Snapshot v1

exports[`heading > renders with id when slug is not present 1`] = `
<DocumentFragment>
  <div
    class="p-2 md:p-4 transition duration-0 hover:duration-150 hover:bg-gray-100 text-gray-600 hover:text-black rounded-md ring-inset hover:ring-1 hover:ring-gray-300 md:flex text-2xl"
  >
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis flex-none"
    >
      <span
        class="border border-1 rounded bg-red-100 text-red-900 border-red-300 p-0 px-2 "
      >
        TODO
      </span>
    </span>
     
    <h1
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis font-bold text-2xl grow"
      id="hopefully-random-id"
    >
      Collect underpants
    </h1>
     
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis space-x-1 space-x-reverse space-x-y space-y-reverse flex flex-row-reverse flex-wrap w-2/6"
    >
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        idea
      </span>
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        strategy
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`heading > renders with slug as id when present 1`] = `
<DocumentFragment>
  <div
    class="p-2 md:p-4 transition duration-0 hover:duration-150 hover:bg-gray-100 text-gray-600 hover:text-black rounded-md ring-inset hover:ring-1 hover:ring-gray-300 md:flex text-2xl"
  >
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis flex-none"
    >
      <span
        class="border border-1 rounded bg-red-100 text-red-900 border-red-300 p-0 px-2 "
      >
        TODO
      </span>
    </span>
     
    <h1
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis font-bold text-2xl grow"
      id="some-slug"
    >
      Collect underpants
    </h1>
     
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis space-x-1 space-x-reverse space-x-y space-y-reverse flex flex-row-reverse flex-wrap w-2/6"
    >
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        idea
      </span>
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        strategy
      </span>
    </span>
  </div>
</DocumentFragment>
`;
